--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -10,6 +10,7 @@ Build-Depends: debhelper (>= 9),
  libsodium-dev,
  libunwind-dev | libunwind8-dev | libunwind7-dev,
  libnss3-dev,
+ libgnutls28-dev,
  pkg-config,
  asciidoc-base | asciidoc, xmlto,
 Standards-Version: 3.9.8
@@ -40,6 +41,7 @@ Depends: libzmq5 (= ${binary:Version}), ${misc:Depends},
  libsodium-dev,
  libunwind-dev | libunwind8-dev | libunwind7-dev,
  libnss3-dev,
+ libgnutls28-dev,
 Conflicts: libzmq-dev, libzmq5-dev
 Replaces: libzmq5-dev
 Provides: libzmq5-dev
