--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -95,12 +95,17 @@ else()
     message(STATUS "capsh not found, skipping tests that require CAP_NET_ADMIN")
 endif()
 
-if(NOT WIN32)
+if(ZMQ_HAVE_IPC)
   list(APPEND tests
     test_ipc_wildcard
     test_pair_ipc
-    test_rebind_ipc
     test_reqrep_ipc
+    test_rebind_ipc
+  )
+endif()
+
+if(NOT WIN32)
+  list(APPEND tests
     test_proxy
     test_proxy_hwm
     test_proxy_single_socket
