Problem: libzmq-dev not installable with libczmq-dev on Ubuntu 16.04
Solution: add alternative dependency as libgnutls-dev | libgnutls28-dev,
so that the resolver can break the tie, as libcurl4-nss-dev depends on
libgnutls-dev which conflicts with libgnutls28-dev

--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 9),
  libsodium-dev,
  libunwind-dev | libunwind8-dev | libunwind7-dev,
  libnss3-dev,
- libgnutls28-dev,
+ libgnutls28-dev | libgnutls-dev,
  pkg-config,
  asciidoc-base | asciidoc, xmlto,
 Standards-Version: 3.9.8
@@ -41,7 +41,7 @@ Depends: libzmq5 (= ${binary:Version}), ${misc:Depends},
  libsodium-dev,
  libunwind-dev | libunwind8-dev | libunwind7-dev,
  libnss3-dev,
- libgnutls28-dev,
+ libgnutls28-dev | libgnutls-dev,
 Conflicts: libzmq-dev, libzmq5-dev
 Replaces: libzmq5-dev
 Provides: libzmq5-dev
