Problem: static libs are generated without given basename

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1195,7 +1195,7 @@ if(MSVC)
       MINSIZEREL_POSTFIX "${MSVC_TOOLSET}-mt-s-${ZMQ_VERSION_MAJOR}_${ZMQ_VERSION_MINOR}_${ZMQ_VERSION_PATCH}"
       DEBUG_POSTFIX "${MSVC_TOOLSET}-mt-sgd-${ZMQ_VERSION_MAJOR}_${ZMQ_VERSION_MINOR}_${ZMQ_VERSION_PATCH}"
       COMPILE_FLAGS "/DZMQ_STATIC"
-      OUTPUT_NAME "lib{ZMQ_OUTPUT_BASENAME}")
+      OUTPUT_NAME "lib${ZMQ_OUTPUT_BASENAME}")
   endif()
 else()
   # avoid building everything twice for shared + static
